tests/NormalTests/paczka1/fuzzy1/89456077.err
Error in line 1: QtWx S13 57,5
Error in line 12: QtWx A763 83,4
Error in line 18: S13 S698 131,7
Error in line 22: qr8gwKµQHe S13 64,4
Error in line 21: NCzwqjo A763 10,2
Error in line 20: 8vk1AAa A763 9,7
